--- a/classifiers.ipynb
+++ b/classifiers.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-16T20:24:23.128552Z",
-     "start_time": "2024-08-16T20:24:22.906026Z"
+     "end_time": "2024-08-18T00:56:18.504819Z",
+     "start_time": "2024-08-18T00:56:18.337810Z"
     }
    },
    "source": [
@@ -30,8 +30,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T20:27:59.260989Z",
-     "start_time": "2024-08-16T20:27:59.211835Z"
+     "end_time": "2024-08-18T00:56:18.570071Z",
+     "start_time": "2024-08-18T00:56:18.512183Z"
     }
    },
    "cell_type": "code",
@@ -203,18 +203,21 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-18T00:56:29.981731Z",
+     "start_time": "2024-08-18T00:56:18.695718Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -272,7 +275,80 @@
     "svm_pred = svm_model.predict(X_test_scaled)\n",
     "print_results(y_test, svm_pred, \"Support Vector Machine\")"
    ],
-   "id": "b4f1079c05c2e884"
+   "id": "b4f1079c05c2e884",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Logistic Regression Results:\n",
+      "Confusion Matrix:\n",
+      "[[7792  160]\n",
+      " [ 854  237]]\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.98      0.94      7952\n",
+      "           1       0.60      0.22      0.32      1091\n",
+      "\n",
+      "    accuracy                           0.89      9043\n",
+      "   macro avg       0.75      0.60      0.63      9043\n",
+      "weighted avg       0.86      0.89      0.86      9043\n",
+      "\n",
+      "\n",
+      "K-Nearest Neighbors Results:\n",
+      "Confusion Matrix:\n",
+      "[[7694  258]\n",
+      " [ 726  365]]\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.91      0.97      0.94      7952\n",
+      "           1       0.59      0.33      0.43      1091\n",
+      "\n",
+      "    accuracy                           0.89      9043\n",
+      "   macro avg       0.75      0.65      0.68      9043\n",
+      "weighted avg       0.87      0.89      0.88      9043\n",
+      "\n",
+      "\n",
+      "Decision Tree Results:\n",
+      "Confusion Matrix:\n",
+      "[[7375  577]\n",
+      " [ 568  523]]\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.93      0.93      7952\n",
+      "           1       0.48      0.48      0.48      1091\n",
+      "\n",
+      "    accuracy                           0.87      9043\n",
+      "   macro avg       0.70      0.70      0.70      9043\n",
+      "weighted avg       0.87      0.87      0.87      9043\n",
+      "\n",
+      "\n",
+      "Support Vector Machine Results:\n",
+      "Confusion Matrix:\n",
+      "[[7799  153]\n",
+      " [ 784  307]]\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.91      0.98      0.94      7952\n",
+      "           1       0.67      0.28      0.40      1091\n",
+      "\n",
+      "    accuracy                           0.90      9043\n",
+      "   macro avg       0.79      0.63      0.67      9043\n",
+      "weighted avg       0.88      0.90      0.88      9043\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   }
  ],
  "metadata": {
